testsuite/tests/rename/should_fail/rnfail007.hs
-- !!! Main module with no definition of main

module Main where

f x = x
